[package]
name = "memory-pool-allocator"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
parking_lot = { version = "0.12", default-features = false }

[features]
default = ["zero-on-free", "zero-on-drop", "statistics"]
zero-on-free = []
zero-on-drop = []
statistics = []
