[package]
name = "memory-pool-allocator"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/Chirping666/memory-pool-allocator"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["no-alloc", "allocator", "memory pool"]
categories = ["embedded", "memory-management", "no-std::no-alloc"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
parking_lot = { version = "0.12", default-features = false }

[features]
default = ["zero-on-free", "zero-on-drop", "statistics"]
zero-on-free = []
zero-on-drop = []
statistics = []
